--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Test</title>
-	<script src="build/app.js"></script>
+	<script src="build/dist/app.js"></script>
 </head>
 <body>
 
