--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Test</title>
-	<script src="build/dist/app.js"></script>
 </head>
 <body>
-
+	<div id="app"></div>
+	<script src="build/dist/app.js"></script>
 </body>
 </html>
